; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_gadget.c_cdns3_ep_inc_deq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_gadget.c_cdns3_ep_inc_deq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdns3_endpoint = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cdns3_endpoint*)* @cdns3_ep_inc_deq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cdns3_ep_inc_deq(%struct.cdns3_endpoint* %0) #0 {
  %2 = alloca %struct.cdns3_endpoint*, align 8
  store %struct.cdns3_endpoint* %0, %struct.cdns3_endpoint** %2, align 8
  %3 = load %struct.cdns3_endpoint*, %struct.cdns3_endpoint** %2, align 8
  %4 = getelementptr inbounds %struct.cdns3_endpoint, %struct.cdns3_endpoint* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* %4, align 4
  %7 = load %struct.cdns3_endpoint*, %struct.cdns3_endpoint** %2, align 8
  %8 = getelementptr inbounds %struct.cdns3_endpoint, %struct.cdns3_endpoint* %7, i32 0, i32 2
  %9 = load %struct.cdns3_endpoint*, %struct.cdns3_endpoint** %2, align 8
  %10 = getelementptr inbounds %struct.cdns3_endpoint, %struct.cdns3_endpoint* %9, i32 0, i32 1
  %11 = load %struct.cdns3_endpoint*, %struct.cdns3_endpoint** %2, align 8
  %12 = getelementptr inbounds %struct.cdns3_endpoint, %struct.cdns3_endpoint* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @cdns3_ep_inc_trb(i32* %8, i32* %10, i32 %13)
  ret void
}

declare dso_local i32 @cdns3_ep_inc_trb(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
